--- a/TraversalCoreProje/Areas/Member/Views/Reservation/NewReservation.cshtml
+++ b/TraversalCoreProje/Areas/Member/Views/Reservation/NewReservation.cshtml
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group">
         @Html.Label("Varsa Eklemek İstedikleriniz")
-        <input type="text" asp-for="PersonCount" class="form-control" />
+        <input type="text" asp-for="Description" class="form-control" />
     </div>
-    <button class="btn btn-outline-success">Rezervasyon Yap</button>
+    <button class="btn btn-sm btn-outline-dark" onclick="alert"('Rezervasyonunuz başlangıçta onay bekliyor şeklinde alınacaktır.Rezervasyon onaylanma süreci için güncel rezervasyonlarım menüsünü takip etmeyi unutmayın');">Rezervasyon Yap</button>
 </form>
