--- a/TraversalCoreProje/Areas/Admin/Views/User/Index.cshtml
+++ b/TraversalCoreProje/Areas/Admin/Views/User/Index.cshtml
@@ -37,4 +37,4 @@
     }
 </table>
 
-<a href="/Admin/User/AddUser" class="btn btn-outline-primary">Yeni Kullanıcı Kaydı</a>
+<a href="/Login/SignUp/" class="btn btn-outline-primary">Yeni Kullanıcı Kaydı</a>
