--- a/TraversalCoreProje/Areas/Admin/Views/Guide/Index.cshtml
+++ b/TraversalCoreProje/Areas/Admin/Views/Guide/Index.cshtml
@@ -37,7 +37,7 @@
                     <a href="/Admin/Guide/ChangeToTrue/@item.GuideID" class="btn btn-outline-info">Aktif Yap!</a>
                 </td>
             }
-                        <td><a href="#" class="btn btn-outline-success">Düzenle</a></td>
+                        <td><a href="/Admin/Guide/EditGuide/" class="btn btn-outline-success">Düzenle</a></td>
                         </tr>
                    }
                    </table>
