--- a/TraversalCoreProje/Views/Admin/PartialSideBar.cshtml
+++ b/TraversalCoreProje/Views/Admin/PartialSideBar.cshtml
@@ -35,6 +35,11 @@
             <i class="menu-icon tf-icons bx bx-help-circle"></i>
             <div data-i18n="Analytics">Rehberlerimiz</div>
         </a>
+    <li class="menu-item">
+        <a href="/Report/Index/;" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-report"></i>
+            <div data-i18n="Analytics">Raporlar</div>
+        </a>
     </li>
     <li class="menu-item">
         <a href="index.html" class="menu-link">
