--- a/TraversalCoreProje/Views/Admin/PartialSideBar.cshtml
+++ b/TraversalCoreProje/Views/Admin/PartialSideBar.cshtml
@@ -36,9 +36,14 @@
             <div data-i18n="Analytics">Rehberlerimiz</div>
         </a>
     <li class="menu-item">
-        <a href="/Report/Index/;" class="menu-link">
+        <a href="/ExcelReport/Index/;" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-report"></i>
             <div data-i18n="Analytics">Raporlar</div>
+        </a>
+    <li class="menu-item">
+        <a href="/Admin/Mail/Index/;" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-mail-send"></i>
+            <div data-i18n="Analytics">Mail Gönder</div>
         </a>
     </li>
     <li class="menu-item">
