--- a/TraversalCoreProje/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProje/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using TraversalCoreProje
-@using TraversalCoreProje.Areas.Member.Models
+@using TraversalCoreProje.Areas.Admin
 @using EntityLayer.Concrete
 @using DTOLayer.DTOs.AnnouncementDTOs
+@using TraversalCoreProje.Areas.Admin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
