--- a/TraversalCoreProje/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProje/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using EntityLayer.Concrete
 @using DTOLayer.DTOs.AnnouncementDTOs
 @using TraversalCoreProje.Areas.Admin.Models
+@using TraversalCoreProje.CQRS.Results.DestinationResults
+@using TraversalCoreProje.CQRS.Commands.DestinationCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
