78.ders sonu Tasarımsal düzenlemeler

--- a/TraversalCoreProje/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalCoreProje/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -1,8 +1,9 @@
-﻿<header id="site-header" class="fixed-top">
+﻿   <!--header-->
+<header id="site-header" class="fixed-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
             <h1>
-                <a class="navbar-brand mr-lg-5" href="index.html">
+                <a class="navbar-brand mr-lg-5" href="/Default/Index/">
                     Traversal
                 </a>
             </h1>
@@ -20,25 +21,25 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Ana Sayfa <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/Default/Index/">Ana Sayfa <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Rotalar</a>
+                        <a class="nav-link" href="/Destination/Index/">Rotalar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pricing.html">Rehberlerimiz</a>
+                        <a class="nav-link" href="/Guide/Index/">Rehberlerimiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">İletişim</a>
+                        <a class="nav-link" href="/ContactUs/Index/">İletişim</a>
                     </li>
 
                 </ul>
             </div>
             <div class="d-lg-block d-none">
-                <a href="contact.html" class="btn btn-style btn-secondary">Rezervasyon Yap</a>
+                <a href="contact.html" class="btn btn-style btn-secondary">Rezarvasyon Yap!</a>
             </div>
             <!-- toggle switch for light and dark theme -->
             <div class="mobile-position">
@@ -58,3 +59,4 @@
         </nav>
     </div>
 </header>
+<!-- //header -->
