--- a/TraversalCoreProje/Views/LayoutPartial/_ScriptsPartial.cshtml
+++ b/TraversalCoreProje/Views/LayoutPartial/_ScriptsPartial.cshtml
@@ -1,11 +1,15 @@
-﻿
+﻿ <!-- Template JavaScript -->
 <script src="~/Traversal-Liberty/assets/js/jquery-3.3.1.min.js"></script>
 <script src="~/Traversal-Liberty/assets/js/theme-change.js"></script>
 <!-- stats number counter-->
+<script src="~/Traversal-Liberty/assets/js/jquery.min.js"></script>
+<script src="~/Traversal-Liberty/assets/js/modernizr-2.6.2.min.js"></script>
+<script src="~/Traversal-Liberty/assets/js/jquery.zoomslider.min.js"></script>
+<script src="~/Traversal-Liberty/assets/js/owl.carousel.js"></script>
 <script src="~/Traversal-Liberty/assets/js/jquery.waypoints.min.js"></script>
 <script src="~/Traversal-Liberty/assets/js/jquery.countup.js"></script>
 
-<script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
+
 <script>
     $('.counter').countUp();
 </script>
@@ -38,7 +42,59 @@
     });
 </script>
 <!--//MENU-JS-->
+
 <script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" href="~/Traversal-Liberty/assets/css/style-liberty.css">
-<script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+        scrollFunction()
+    };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("movetop").style.display = "block";
+        } else {
+            document.getElementById("movetop").style.display = "none";
+        }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
+<script>
+    $(function () {
+        $('.navbar-toggler').click(function () {
+            $('body').toggleClass('noscroll');
+        })
+    });
+</script>
+
+<script>
+    $(document).ready(function () {
+        $("#owl-demo1").owlCarousel({
+            loop: true,
+            margin: 20,
+            nav: false,
+            responsiveClass: true,
+            responsive: {
+                0: {
+                    items: 1,
+                    nav: false
+                },
+                736: {
+                    items: 1,
+                    nav: false
+                },
+                1000: {
+                    items: 1,
+                    nav: false,
+                    loop: true
+                }
+            }
+        })
+    })
+</script>
