--- a/TraversalCoreProje/Views/Shared/Components/_SliderPartial/Default.cshtml
+++ b/TraversalCoreProje/Views/Shared/Components/_SliderPartial/Default.cshtml
@@ -1,13 +1,13 @@
 ﻿<section class="w3l-main-slider" id="home">
     <div class="banner-content">
         <div id="demo-1"
-             data-zs-src='["/Traversal-Starter/assets/images/banner1.jpg", "/Traversal-Starter/assets/images/banner2.jpg","/Traversal-Starter/assets/images/banner3.jpg", "/Traversal-Starter/assets/images/banner4.jpg"]'
+             data-zs-src='["/Traversal-Liberty/assets/images/banner1.jpg", "/Traversal-Liberty/assets/images/banner2.jpg","/Traversal-Liberty/assets/images/banner3.jpg", "/Traversal-Liberty/assets/images/banner4.jpg"]'
              data-zs-overlay="dots">
             <div class="demo-inner-content">
                 <div class="container">
                     <div class="banner-infhny">
                         <h3>Seyahatler için uzağa gitmeye gerek yok.</h3>
-                        <h6 class="mb-3">Bir sonraki maceranı hemen planla</h6>
+                        <h6 class="mb-3">Bir sonraki maceranı hemen planla.</h6>
                         <div class="flex-wrap search-wthree-field mt-md-5 mt-4">
                             <form action="#" method="post" class="booking-form">
                                 <div class="row book-form">
@@ -15,13 +15,13 @@
 
                                         <select name="selectpicker" class="selectpicker">
                                             <option value="">Rotalar</option>
-                                            <option value="africa">Ukrayna</option>
-                                            <option value="america">Almanya</option>
-                                            <option value="asia">Belçika-Hollanda</option>
-                                            <option value="eastern-europe">Balkan Turu</option>
+                                            <option value="africa">Ukrayna Turu</option>
+                                            <option value="america">Almanya Turu</option>
+                                            <option value="asia">Belçika - Hollanda Turu</option>
+                                            <option value="eastern-europe">Balkanlar Turu</option>
                                             <option value="europe">Mısır Turu</option>
-                                            <option value="south-america">İspanya-Tunus</option>
-                                            <option value="south-america">Doğu Anadolu Gezisi</option>
+                                            <option value="south-america">İspanya - Tunus Turu</option>
+                                            <option value="south-america">Doğu Anadolu Turu</option>
                                         </select>
 
                                     </div>
