--- a/TraversalCoreProje/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalCoreProje/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="/Guide/Index/">Rehberlerimiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ContactUs/Index/">İletişim</a>
+                        <a class="nav-link" href="/Contact/Index/">İletişim</a>
                     </li>
 
                 </ul>
