92.Ders Sonu Rol Atama işlemleri tamamlandı

--- a/TraversalCoreProje/Views/Admin/PartialSideBar.cshtml
+++ b/TraversalCoreProje/Views/Admin/PartialSideBar.cshtml
@@ -36,7 +36,7 @@
             <div data-i18n="Analytics">Rehberlerimiz</div>
         </a>
     <li class="menu-item">
-        <a href="/ExcelReport/Index/;" class="menu-link">
+        <a href="/Admin/Excel/Index/;" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-report"></i>
             <div data-i18n="Analytics">Raporlar</div>
         </a>
@@ -89,11 +89,21 @@
         </a>
     </li>
     <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bxs-thermometer"></i>
-            <div data-i18n="Analytics">Rol İşlemleri</div>
+        <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <i class="menu-icon tf-icons bx bx-layout"></i>
+            <div data-i18n="Layouts">Rol İşlemleri</div>
         </a>
-    </li>
+        <ul class="menu-sub">
+            <li class="menu-item">
+                <a href="/Admin/Role/Index" class="menu-link">
+                    <div data-i18n="Without menu">Rol Ekle - Sil - Güncelle</div>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="/Admin/Role/UserList" class="menu-link">
+                    <div data-i18n="Without navbar">Rol Atama</div>
+                </a>
+            </li>
     <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-exit"></i>
